# telegram_gfcr

./: .env.example  .gitignore  Dockerfile  MELHORIAS_TELETHON.md  README.md  pyproject.toml  run.sh
.claude/: settings.local.json
docs/: diagrams.md
src/telegram_gfcr/: __init__.py  cli.py  config.py  interactive.py
src/telegram_gfcr/commands/: __init__.py  auth.py  backup.py  forward.py  leave.py  list.py  search.py
src/telegram_gfcr/core/: __init__.py  client.py  errors.py  logging.py
src/telegram_gfcr/utils/: __init__.py
tests/: __init__.py  test_cli.py
